@@ -1,0 +1,75 @@
+.\" Hey, EMACS: -*- nroff -*-
+.\" rnano.1 is copyright 2005 by
+.\" Thijs Kinkhorst <thijs@kinkhorst.com>;
+.\" skeleton based on nano-tiny.1 by Jordi Mallach <jordi@debian.org>.
+.\"
+.\" This is free documentation, see the latest version of the GNU General
+.\" Public License for copying conditions. There is NO warranty.
+.\"
+.\" First parameter, NAME, should be all caps
+.\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
+.\" other parameters are allowed: see man(7), man(1)
+.TH RNANO 1 "November 16, 2005"
+.\" Please adjust this date whenever revising the manpage.
+.\"
+.SH NAME
+rnano \- Restricted mode for Nano's ANOther editor, an enhanced free Pico Clone
+.SH SYNOPSIS
+.B rnano
+.RI [options]\ [+LINE] " file"
+.br
+.SH DESCRIPTION
+This manual page documents briefly the
+.B rnano
+command.
+.PP
+.\" TeX users may be more comfortable with the \fB<whatever>\fP and
+.\" \fI<whatever>\fP escape sequences to invoke bold face and italics, 
+.\" respectively.
+\fBnano\fP is a small, free and friendly editor which aims to replace
+Pico, the default editor included in the non-free Pine package. Rather
+than just copying Pico's look and feel,
+.B nano
+also implements some missing (or disabled by default) features in Pico,
+such as "search and replace" and "goto line number".
+.br
+.B rnano
+is a restricted version of \fBnano\fP, which only edits specific files and doesn't
+allow the user access to the filesystem or a command shell.
+.PP
+In restricted mode, \fBnano\fP will \fInot\fP:
+.IP \[bu] 2
+read or write to any file not specified on the command line;
+.IP \[bu]
+read any \fInanorc\fP files;
+.IP \[bu]
+allow suspending;
+.IP \[bu]
+allow a file to be appended to, prepended to, or saved under a
+different name;
+.IP \[bu]
+use backup files and spell checking.
+.SH OPTIONS
+.TP
+.B \-V (\-\-version)
+Show the current version number and author.
+.TP
+.B \-h (\-\-help)
+Display a summary of command line options.
+.TP
+See the \fBnano\fP(1) manpage for the complete documentation of nano.
+.SH BUGS
+Please send any comments or bug reports to
+.B nano@nano-editor.org.
+.br
+The nano mailing list is available from
+.B nano-devel@lists.sourceforge.net.
+To subscribe, email to nano-devel-request@lists.sourceforge.net with a
+subject of "subscribe".
+.SH HOMEPAGE
+http://www.nano-editor.org/
+.SH AUTHOR
+Chris Allegretta <chrisa@asty.org>, et al (see AUTHORS for details).
+This manual page was originally written by Thijs Kinkhorst
+<thijs@kinkhorst.com>, for the Debian system (but may be
+used by others).
